--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "sitemap": "babel-node sitemaGenerator.js",
     "predeploy": "npm run build",
     "deploy": ""
   },
@@ -44,6 +45,10 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.29.4",
     "gh-pages": "^3.2.3"
