--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
     "predeploy": "npm run build",
     "deploy": ""
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
