--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "date-fns": "^2.28.0",
     "firebase": "^9.8.1",
     "react": "^18.1.0",
